--- a/index.html
+++ b/index.html
@@ -27,31 +27,19 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">View Music<span class="sr-only">(current)</span></a></li>
         <li><a href="addMusic.html">Add Music</a></li>
-        <li><a href="profile.html">Profile</a></li>
+        <li><a href="/#/profile">Profile</a></li>
         <li><a href="/#/songs">Songs</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="index.html">View Music</a></li>
-            <li><a href="addMusic.html">Add Music</a></li>
-            <li><a href="profile.html">Profile</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Close Application</a></li>
-          </ul>
-        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
 
-  <section ng-controller="SongCtrl">
+  <section>
     <div class="container">
       <div class="row">
         <div class="options col-sm-3">
-          <form action="sing.html" method="POST">
+          <form action="sing.html" method="POST" ng-controller="SongCtrl">
             <label for="artist">Artist:</label>
             <div id="artistList">
               <select name="artist" id="selectedArtist" class="form-control"
@@ -103,8 +91,9 @@
   <script src="/bower_components/angular-filter/dist/angular-filter.min.js"></script>
   <script src="/bower_components/angular-route/angular-route.js"></script>
   <script src="app/app.js"></script>
-  <script src="app/filters/capitalize.js"></script>
-  
+  <script src="app/factories/song-storage.js"></script>
+  <script src="app/filters/capitalize.js"></script> 
   <script src="app/controllers/songs.js"></script>
+  <script src="app/controllers/song-detail.js"></script>
 </body>
 </html>
