--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">View Music<span class="sr-only">(current)</span></a></li>
-        <li><a href="addMusic.html">Add Music</a></li>
+        <li><a href="/#/addMusic">Add Music</a></li>
         <li><a href="/#/profile">Profile</a></li>
         <li><a href="/#/songs">Songs</a></li>
       </ul>
